name:                wavefront
version:             0.7.1.5
synopsis:            Wavefront OBJ loader
description:         A Wavefront OBJ loader. Currently supports polygonal information. More could
                     be added if needed (like curves and surface) if people contribute. Feel free
                     to help!
homepage:            https://github.com/phaazon/wavefront
bug-reports:         https://github.com/phaazon/wavefront/issues
license:             BSD3
license-file:        LICENSE
author:              Dimitri Sabadie <dimitri.sabadie@gmail.com>
maintainer:          Dimitri Sabadie <dimitri.sabadie@gmail.com>
copyright:           Dimitri Sabadie

category:            Codec
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >= 1.10

source-repository head
  type:     git
  location: git://github.com/phaazon/wavefront.git

library
  ghc-options:         -Wall

  exposed-modules:     Codec.Wavefront
                     , Codec.Wavefront.Element
                     , Codec.Wavefront.Face
                     , Codec.Wavefront.IO
                     , Codec.Wavefront.Location
                     , Codec.Wavefront.Line
                     , Codec.Wavefront.Normal
                     , Codec.Wavefront.Object
                     , Codec.Wavefront.Point
                     , Codec.Wavefront.TexCoord

  other-modules:       Codec.Wavefront.Token
                     , Codec.Wavefront.Lexer

  default-extensions:  OverloadedStrings

  build-depends:       base
                     , containers
                     , attoparsec
                     , dlist
                     , filepath
                     , mtl
                     , text
                     , transformers
                     , vector

  hs-source-dirs:      src

  default-language:    Haskell2010
